      - preinst-uses-dpkg-maintscript-helper-without-predepends

  * checks/*:
    + [NT] Remove assumption that lintian will chdir into the
      the lab before calling the check.
  * checks/binaries{,.desc}:
    + [NT] Merge apparently-truncated-elf-binary into
      apparently-corrupted-elf-binary.
    + [NT] Remove some references to objdump in tag descriptions
      as Lintian uses readelf.
  * checks/cruft:
    + [NT] Detect MS-DOS executables as windows binaries.
  * checks/deb-format{,.desc}:
    + [NT] Retire data.tar.xz tag.  (Closes: #680391)
  * checks/fields{,.desc}:
    + [NT] Mention that cme can automate fixing some perl
      related tags.  Thanks to gregor herrmann for the report
      and patch.  (Closes: #680446)
    + [NT] Retire no-source-field since Lintian cannot emit it any
      more due to dpkg-source refusing to extract such source
      packages.
  * checks/infofiles:
    + [NT] Use L::Util's gzip decompressor rather than zcat.
  * checks/manpages{,.desc}:
    + [CW,NT] Manually do redirects and chdir rather than
      invoking a shell when calling man and lexgrog.
    + [CW,NT] Be stricter with missing roff preprocessors by
      setting MANROFFSEQ to the empty string when calling man.
    + [CW,NT] Pass -Tutf8 -Z to man to skip an unused part of
      the groff pipeline.
    + [CW,NT] Use the L::Util gzip decompressor to open gzipped
      manpages.
  * checks/md5sums:
    + [NT] Use L::Collect's conffile API instead of accessing the
      "conffiles" control file directly.
  * checks/scripts{,.desc}:
    + [NT] Retire check for dpkg-maintscript-helper in preinst.
    + [NT] Fix false positive "executable-not-elf-or-script" when
      the file is an executable hardlink to a script.
  * checks/source-copyright{,.desc}:
    + [NT] Check for possible misspellings of known field
      names.  (Closes: #678639)
  * checks/version-substvars{,.desc}:
    + [JW,NT] Extend version-substvar-for-external-package to