@@ -1,11 +1,0 @@
-#!/usr/bin/make -f
-
-TMP:=debian/init.d-general-bugs
-%:
-	dh $@
-
-override_dh_builddeb:
-	mkdir -p $(TMP)/etc/rc2.d
-	echo "# Hallo word" > $(TMP)/etc/rc2.d/file
-	echo "/etc/rc2.d/file" >> $(TMP)/DEBIAN/conffiles
-	dh_builddeb
